# air_pollution_analysis

./: .gitignore  README.md  pyproject.toml
notebook/: 01_cleaning.ipynb  data_check.ipynb  data_visaulization_heatmap.ipynb  data_visualization.ipynb  data_visualization_boxplot_day.ipynb  data_visualization_boxplot_month.ipynb  data_visualization_boxplot_year.ipynb  data_visualization_line_chart.ipynb
src/: main.py
src/cleaning/: data_cleaning.py
src/utils/: IO_file.py  openfile.py
